--- a/app/assets/stylesheets/styles/globals.scss
+++ b/app/assets/stylesheets/styles/globals.scss
@@ -84,3 +84,21 @@ a:hover, a:active, a:visited, a:focus {
     max-width: 85% !important;
   }
 }
+
+.grid {
+  display: grid;
+  grid-column-gap: 1rem;
+  grid-row-gap: .5rem;
+}
+
+.grid-columns-2 {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid-columns-3 {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, 1fr);
+}
