--- a/app/views/patients/_patient_dashboard.html.erb
+++ b/app/views/patients/_patient_dashboard.html.erb
@@ -1,20 +1,16 @@
 <div id="patient_dashboard_content">
-  <%= bootstrap_form_with model: patient,
-                         html: { id: 'patient_dashboard_form' },
-                         local: false,
-                         method: 'patch',
-                         class: 'edit_patient' do |f| %>
+  
     
 
     <%= render ReactComponent.new("PatientDashboardForm", raw_props: { 
       patient: patient.as_json, 
-      weeksOptions: weeks_options.map { |opt| { label: opt[0], value: opt[1], selected: opt[1] == patient.last_menstrual_period_weeks } },
-      daysOptions: days_options.map { |opt| { label: opt[0], value: opt[1], selected: opt[1] == patient.last_menstrual_period_days } },
+      weeksOptions: weeks_options.map { |opt| { label: opt[0], value: opt[1] } },
+      daysOptions: days_options.map { |opt| { label: opt[0], value: opt[1] } },
       initialCallDate: patient.initial_call_date.strftime("%m/%d/%Y"),
       statusTooltip: status_help_text(patient),
       isAdmin: current_user.admin?,
-      patientPath: patient_path(patient)
+      patientPath: patient_path(patient),
+      formAuthenticityToken: form_authenticity_token
     }) %>
 
-  <% end %>
 </div>
