--- a/app/views/patients/_patient_dashboard.html.erb
+++ b/app/views/patients/_patient_dashboard.html.erb
@@ -7,7 +7,7 @@
       weeksOptions: weeks_options.map { |opt| { label: opt[0], value: opt[1] } },
       daysOptions: days_options.map { |opt| { label: opt[0], value: opt[1] } },
       initialCallDate: patient.initial_call_date.strftime("%m/%d/%Y"),
-      statusTooltip: status_help_text(patient),
+      statusHelpText: status_help_text(patient),
       isAdmin: current_user.admin?,
       patientPath: patient_path(patient),
       formAuthenticityToken: form_authenticity_token
